# dimkey

./: .gitignore  .~lock.隐墨需求跟踪表.xlsx#  CHANGELOG.md  CLAUDE.md  README.md  index.html  latest.json  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: license-cli.rs  test_pdf.rs
src-tauri/icons/: icon.icns
src-tauri/resources/builtin_dict/: en.json  zh.json
src-tauri/resources/ner/: model_config.json
src-tauri/src/: analytics.rs  lib.rs  main.rs
src-tauri/src/commands/: alias_group.rs  config.rs  desensitize.rs  detect.rs  (+7 more)
src-tauri/tests/: alias_group.rs  audit_dump.rs  batch_processing.rs  boundary.rs  boundary_english.rs  column_desensitize.rs  column_inference.rs  consistency.rs  consistency_bilingual.rs  consistency_english.rs  consistency_workspace.rs  desensitize_csv.rs  desensitize_english.rs  desensitize_english_csv.rs  desensitize_english_docx.rs  desensitize_english_xlsx.rs  desensitize_excel.rs  desensitize_executive.rs  desensitize_international.rs  desensitize_legal_english.rs  desensitize_pdf.rs  desensitize_scenario_csv.rs  desensitize_scenario_docx.rs  desensitize_scenario_xlsx.rs  desensitize_txt.rs  desensitize_uk.rs  desensitize_us_compliance.rs  desensitize_word.rs  dict_integration.rs  dict_special.rs  encoding_boundary.rs  full_pipeline_basic.rs  full_pipeline_csv.rs  full_pipeline_docx.rs  full_pipeline_english.rs  full_pipeline_txt.rs  full_pipeline_xlsx.rs  generalize_integration.rs  license_watermark.rs  regression_no_passthrough.rs  (+7 more)
(+355 files in other folders)
