[package]
name = "dimkey"
version = "0.5.2"
description = "Dimkey — 本地文档脱敏工具"
authors = ["you"]
edition = "2021"

[lib]
name = "dimkey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
csv = "1"
docx-rs = "0.4"
zip = "2"
quick-xml = "0.37"
regex = "1"
aho-corasick = "1"
unicode-segmentation = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rust_xlsxwriter = "0.80"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
ort = "2.0.0-rc.11"
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tauri-plugin-aptabase = { git = "https://github.com/cube1/tauri-plugin-aptabase", branch = "main" }
office-crypto = "0.2"
encoding_rs = "0.8"
printpdf = "0.7"
pdfium-render = { version = "0.8", features = ["sync"] }
image = "0.25"
base64 = "0.22"
tauri-plugin-webdriver-automation = "0.1.3"

[dev-dependencies]
tempfile = "3"
